starting loop for far field eval pts

--- a/ntff_with_tm_update.ipynb
+++ b/ntff_with_tm_update.ipynb
@@ -608,6 +608,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56151042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Above code deals with calcualting E in far field for only one point in space.\n",
+    "#To better visualize far field effects, need to evaluate Ez in far field across some line.\n",
+    "\n",
+    "#copying from existing code block, looping to create matrix of e^jkr hat r bar prime factors\n",
+    "#defining r_bar position in far field:\n",
+    "\n",
+    "r_bar_x = 1000e-3 # x distance from center is 1000mm away: 1 m away\n",
+    "r_bar_y_min = -1000e-3\n",
+    "r_bar_y_max = 1000e-3\n",
+    "\n",
+    "#far field will be evaluated from, in x,y: 1m, -1m --> 1m, 1m: essentially vertical line to rihgt of simulation\n",
+    "r_bar_x_y=np.array([r_bar_x,r_bar_y])\n",
+    "center_sim_x_y=np.array([center_x,center_y])\n",
+    "r_hat_dot_r_prime_bar=np.zeros(numL_cells)\n",
+    "\n",
+    "#define unit vector r hat from given r bar positions\n",
+    "r_bar_magnitude= np.linalg.norm(r_bar_x_y - center_sim_x_y)\n",
+    "print(r_bar_magnitude)\n",
+    "\n",
+    "r_hat_x_y=np.array([r_bar_x/r_bar_magnitude , r_bar_y/r_bar_magnitude])\n",
+    "\n",
+    "#near field source point vector\n",
+    "r_bar_prime_x=(np.linspace(L_ending_dim,L_ending_dim,numL_cells)) - (center_x*dx)\n",
+    "r_bar_prime_y=(np.linspace(L_starting_dim,L_ending_dim,numL_cells)) - (center_y*dy)\n",
+    "r_bar_prime_x_y=np.array([r_bar_prime_x,r_bar_prime_y])\n",
+    "\n",
+    "r_hat_dot_r_prime_bar=np.dot(r_hat_x_y,r_bar_prime_x_y)\n",
+    "#print(r_hat_dot_r_prime_bar)                    \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3b96c9d3",
    "metadata": {},
