--- a/ntff_with_tm_update.ipynb
+++ b/ntff_with_tm_update.ipynb
@@ -852,28 +852,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "ecffd41a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can't multiply sequence by non-int of type 'complex'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m k \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m/\u001b[39m lambda0\n\u001b[0;32m      4\u001b[0m L1_integral \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0\u001b[39mj\n\u001b[1;32m----> 5\u001b[0m L1_integral_arr \u001b[38;5;241m=\u001b[39m ( (omega0 \u001b[38;5;241m*\u001b[39m mu0 \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39msum(Jeq_L1_phasors[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])) \u001b[38;5;241m-\u001b[39m (k\u001b[38;5;241m*\u001b[39mMeq_L1_phasors[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]) ) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241;43m1\u001b[39;49m\u001b[43mj\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mr_prime_cos_phi_vec_L1\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      7\u001b[0m L1_integral_val\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39msum(L1_integral_arr)\n\u001b[0;32m      9\u001b[0m L1_integral_val_squared\u001b[38;5;241m=\u001b[39mL1_integral_val\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'complex'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-3327494.258118995+2313673.5129906936j)\n"
      ]
     }
    ],
    "source": [
     "#computing closed contour integral over L1 of Jeq and Meq\n",
     "#defining wavenumber k\n",
+    "r_prime_cos_phi_vec_L1=np.array(r_prime_cos_phi_vec_L1)\n",
     "k = 2 * np.pi / lambda0\n",
     "L1_integral = 0+0j\n",
-    "L1_integral_arr = ( (omega0 * mu0 * np.sum(Jeq_phasors[0][0:-1])) - (k*Meq_phasors[0:-1]) ) * np.exp(1j * k *r_prime_cos_phi_vec_L1[0:-1])\n",
+    "L1_integral_arr = ( (omega0 * mu0 * np.sum(Jeq_L1_phasors[0:-1])) - (k*Meq_L1_phasors[0:-1]) ) * np.exp(1j * k *r_prime_cos_phi_vec_L1[0:-1])\n",
     "\n",
     "L1_integral_val=np.sum(L1_integral_arr)\n",
     "\n",
